test using virtual threads